# drf-authentify

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTORS.txt  LICENSE  README.md  manage.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  todo.md
.github/workflows/: deploy.yml  main.yml  test.yml
drf_authentify/: admin.py  apps.py  asgi.py  auth.py  choices.py  compat.py  context.py  contexts.py  forms.py  managers.py  models.py  services.py  settings.py  types.py  urls.py  utils.py  validators.py  wsgi.py
drf_authentify/auth/: __init__.py  authentication.py
drf_authentify/base/: models.py
drf_authentify/context/: __init__.py  context_params.py
drf_authentify/migrations/: 0001_initial.py  0002_rename_token_authtoken_access_token_hash_and_more.py  0003_alter_authtoken_user.py
drf_authentify/services/: __init__.py  token_service.py
drf_authentify/tests/: test_models.py  test_utils.py
drf_authentify/utils/: imports.py  tokens.py
drf_authentify_project/: asgi.py  settings.py  urls.py  wsgi.py
sample_project/: apps.py  serializers.py  urls.py  utils.py  views.py
tests/: test_admin.py  test_auth.py  test_choices.py  test_compat.py  test_context.py  test_forms.py  test_managers.py  test_models.py  test_service.py  test_services.py  test_settings.py  test_types.py  test_util_imports.py  test_util_tokens.py  test_utils.py  test_validators.py  text_contexts.py
