[build-system]
requires = ["setuptools>=61.0"]
build-backend = 'setuptools.build_meta'


[project]
name = "drf-authentify"
version = "0.1.0"
description = "A simple authentication module for django rest framework"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["django", "djangorestframework", "drf", "authentication"]
authors = [
    {name = "Gabriel Idenyi", email = "idenyigabriel@gmail.com"}
]
maintainers = []
requires-python = ">=3.7"
dependencies = [
    "Django>=3.2; os_name != 'nt'",
    "djangorestframework>=3.1; os_name != 'nt'",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]


[project.urls]
Homepage = "https://github.com/idenyigabriel/drf-authentify"
Documentation = "https://github.com/idenyigabriel/drf-authentify/README.md"
Repository = "https://github.com/idenyigabriel/drf-authentify"
Issues = "https://github.com/idenyigabriel/drf-authentify/issues"
Changelog = "https://github.com/idenyigabriel/drf-authentify/blob/main/CHANGELOG.md"


[project.optional-dependencies]
cli = []


[tool.setuptools]
include-package-data = false
packages = ["drf_authentify"]
